<resources>
    <string name="app_name">Flashdiscount</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_kortingen">Discounts</string>
    <string name="nav_my_discounts">My active discounts</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_account">Me</string>
    <string name="nav_settings">Settings</string>
    <string name="claims_left">Claims left:</string>
    <string name="left">Left</string>
    <string name="time_left">Time left:</string>
    <string name="favorite">Favorite</string>
    <string name="claim">Claim</string>
    <string name="dismiss">Dismiss</string>
    <string name="login_popup_title">To be able to save claimed discounts, pick an account</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="claim_fab_desc">Claim</string>
    <string name="temp_name_menu">Log in to</string>
    <string name="temp_email_nav">see your info here</string>
    <string name="all_notifications">All notifications</string>
    <string name="camera_explanation">Camera permission is needed to scan the QR code.</string>
    <string name="camera_success">Click \"Claim\" again to claim your discount</string>
    <string name="location_explanation">You want the discounts around you, don\'t you?</string>
    <string name="no_permission_camera">We need the camera to scan a QR code :(</string>
    <string name="no_permission_location">oh noes, now we\'ll just show you Amsterdam :(</string>
    <string name="to_many_claims">You claimed this discount to many times</string>
    <string name="unknown_error">Unknown error</string>
    <string name="wrong_qr_code">This is not a QR code we support</string>
    <string name="server_internal_error">Server couldn\'t process your discount</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="couldnt_claim_discount">Couldn\'t claim discount</string>
    <string name="discount_not_found">Discount could not be found</string>
    <string name="discount_plural">Discounts</string>
    <string name="close">Sluiten</string>
    <string name="notification_title">FlashDiscount Info</string>
    <string name="no_company_data">No company data available</string>
    <string name="hour">hr</string>
    <string name="hour_plural">hrs</string>
    <string name="minutes">m</string>
    <string name="minutes_plural">m</string>
    <string name="expired_time">EXPIRED</string>
    <string name="favorite_button">Favorite button</string>
    <string name="category_indicator">Category indicator</string>
    <string name="list_hierarchy_indicator">List hierarchy indicator</string>
    <string name="succes_claim">You successfuly claimed a discount.</string>


    <!-- Drawer strings -->
    <string-array name="drawer_items">
        <item name="home">Home</item>
        <item name="discounts">Discounts</item>
        <item name="favorites">Favorieten</item>

    </string-array>
</resources>
