<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/nav_header"
              android:layout_width="match_parent"
              android:layout_height="@dimen/nav_header_height"
              android:gravity="bottom"
              android:orientation="vertical">

    <hva.flashdiscount.layout.RoundNetworkImageView
        android:id="@+id/profile_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/profile_picture_desc"/>

    <TextView
        android:id="@+id/naam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/temp_name_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_email_nav"
        android:textColor="@color/colorIcons"/>

</LinearLayout>
