<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    tools:context="hva.flashdiscount.fragment.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/company_detail_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="4dp"
                android:minHeight="100dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:srcCompat="@drawable/cast_album_art_placeholder" />

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_discount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">
                    <Button
                        android:id="@+id/claim_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:textAlignment="textEnd"
                        android:text="@string/claim"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/discount_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:maxLines="1"
                        android:text="3 beers for 2 euros"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <LinearLayout
                        android:id="@+id/discount_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/discount_description"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/claims_left" />

                            <TextView
                                android:id="@+id/claims_left"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="200" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/time_left" />

                            <TextView
                                android:id="@+id/time_left"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="53 min" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_company"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <Button
                        android:id="@+id/favorite_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:textAlignment="textEnd"
                        android:text="@string/favorite"
                        android:textColor="@color/colorAccent" />
                    <TextView
                        android:id="@+id/company_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="Company 101"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/company_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:layout_below="@+id/company_name"
                        android:text="long description here"
                        android:textAppearance="?android:attr/textAppearance"
                        android:textColor="@color/textColorSecondary" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView><!--<android.support.design.widget.FloatingActionButton--><!--android:id="@+id/view"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_gravity="bottom|end"--><!--android:layout_margin="16dp"--><!--android:layout_marginBottom="0dp"--><!--android:clickable="true"--><!--android:contentDescription="@string/claim_fab_desc"--><!--android:src="@drawable/ic_menu_send"--><!--android:tint="@color/colorPrimaryLight"--><!--app:backgroundTint="@color/colorAccent"--><!--app:borderWidth="0dp"--><!--app:elevation="2dp" />-->

</android.support.design.widget.CoordinatorLayout>
